# i3spotify

./: Cargo.toml  Readme.md
src/: main.rs
